<resources>
    <string name="app_name">Praktikum2</string>
    <string name="person_name">Joko Anwar</string>
    <string name="phone_number">085697752948</string>
    <string name="person_pict">Person Icon</string>
    <string name="sign_out">Sign Out Icon</string>
    <string name="qr_desc">Qr Code</string>
    <string name="button_name">Scan My QR Code</string>
    <string name="img_desc">Michie JKT48</string>
    <string name="member_name">Michelle Alexandra</string>
    <string name="button_nameGravity">JKT48 Member</string>
    <string name="text_1">Download After Effect</string>
    <string name="text_2">About After Effect</string>
    <string name="text_3">Installation</string>
    <string name="text_4">Tutorial</string>
    <string name="text_5">Plugins</string>
    <string name="text_6">Need help about this program?</string>
    <string name="text_tablenama">Nama :</string>
    <string name="text_username">Masukan Username Kamu</string>
    <string name="text_phone">Masukan Nomor HP Kamu</string>
    <string name="text_adress">Masukan Alamat Kamu</string>
    <string name="text_tablephone">Telp :</string>
    <string name="text_tableadress">Alamat :</string>
    <string name="submit_text">Submit</string>

</resources>