<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="25dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
<!--    tools:context="linear">-->

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_gravity="top|center"
        android:contentDescription="@string/img_desc"
        app:srcCompat="@drawable/img_ae" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/button7"
            android:layout_width="75dp"
            android:layout_height="55dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:text="@string/text_1"
            app:cornerRadius="30dp"
            android:backgroundTint="@color/red"
            />

        <Button
            android:id="@+id/button8"
            android:layout_width="75dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:text="@string/text_2"
            app:cornerRadius="30dp"
            android:backgroundTint="@color/purple_700"
            />
    </LinearLayout>

    <Button
        android:id="@+id/button11"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_3"
        app:cornerRadius="30dp"
        />

    <Button
        android:id="@+id/button12"
        android:layout_marginTop="15dp"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/text_4"
        android:backgroundTint="@color/black"
        app:cornerRadius="30dp"
        />

    <Button
        android:id="@+id/button13"
        android:layout_marginTop="15dp"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        app:cornerRadius="30dp"
        android:text="@string/text_5" />

    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/text_6"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textSize="20dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/baseline_arrow_forward_ios_24" />


    </LinearLayout>


</LinearLayout>