<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".table_layout">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/imagetable"
            android:layout_width="146dp"
            android:layout_height="100dp"
            android:contentDescription="@string/img_desc"
            android:src="@drawable/img_icontable">
        </ImageView>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textview_telptable"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/text_tablenama"
            android:textColor="@color/black"
            android:textSize="16sp">
        </TextView>
        <EditText
            android:id="@+id/username"
            android:layout_height="48dp"
            android:layout_column="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/text_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:textColor="@color/black"
            android:textSize="16sp">
        </EditText>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/phone"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/text_tablephone"
            android:textColor="@color/black"
            android:textSize="16sp">
        </TextView>
        <EditText
            android:id="@+id/telp"
            android:layout_height="48dp"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:hint="@string/text_phone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            >
        </EditText>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/text_alamat"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/text_tableadress"
            android:textColor="@color/black"
            android:textSize="16sp">
        </TextView>
        <EditText
            android:id="@+id/alamat"
            android:layout_height="48dp"
            android:layout_column="1"
            android:layout_marginLeft="10dp"
            android:hint="@string/text_adress"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="5dp"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            >
        </EditText>
    </TableRow>
    <TableRow
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center">

        <Button
            android:id="@+id/submit_btn"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/submit_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="30dp">

        </Button>

    </TableRow>

</TableLayout>