<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrameLayout">


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_istri"
        android:contentDescription="@string/img_desc"
        />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="75dp"
        android:layout_height="85dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/img_logo"
        android:layout_gravity="top|left"
        android:contentDescription="@string/img_desc"
        />

    <TextView
        android:id="@+id/textView3"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginStart="-30dp"
        android:layout_marginTop="19dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginStart="-54dp"
        android:layout_marginTop="45dp"
        android:text="@string/img_desc"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center|left"
        android:layout_marginStart="12dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:contentDescription="@string/img_desc"
        />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center|right"
        android:layout_marginStart="12dp"
        android:src="@drawable/baseline_arrow_forward_ios_24"
        android:contentDescription="@string/img_desc"
        />

    <Button
        android:id="@+id/button"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_nameGravity"
        android:layout_gravity="bottom|center"
        android:backgroundTint="@color/red"
        android:contentDescription="@string/img_desc"
        />

</FrameLayout>